exports[`test getClasses appends other classes provided 1`] = `"hard background--light-primary test test2"`;

exports[`test getClasses returns default classes 1`] = `"hard background--light-primary"`;

exports[`test renders with an image 1`] = `
<section className="hard background--light-primary" style={{...}} data-status-scroll-item={true}>
<div className="one-whole ratio--square ratio--landscape@palm-wide background--fill" style={{...}} />
<div className="soft soft-double@palm-wide-and-up push-top">
<h2 className="capitalize" />
<div dangerouslySetInnerHTML={{...}} />
</div>
<Apollo(Connect(Template)) excludedIds={{...}} tags={{...}} />
</section>
`;

exports[`test renders with scripture 1`] = `
<section className="hard background--light-primary" style={{...}} data-status-scroll-item={true}>
<div className="one-whole ratio--square ratio--landscape@palm-wide background--fill" style={{...}} />
<div className="soft soft-double@palm-wide-and-up push-top">
<h2 className="capitalize" />
<div dangerouslySetInnerHTML={{...}} />
</div>
<Apollo(Connect(Template)) excludedIds={{...}} tags={{...}} />
</section>
`;

exports[`test renders without images or scripture 1`] = `
<section className="hard background--light-primary" style={{...}} data-status-scroll-item={true}>
<div className="soft soft-double@palm-wide-and-up push-top">
<h2 className="capitalize" />
<div dangerouslySetInnerHTML={{...}} />
</div>
<Apollo(Connect(Template)) excludedIds={{...}} tags={{...}} />
</section>
`;
